err/pyolite.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Unipath-1.1.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/coverage'...
Listing './lib/python3.5/site-packages/coverage/htmlfiles'...
Listing './lib/python3.5/site-packages/coverage-3.7.1.egg-info'...
Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/repository.py'...
***   File "./lib/python3.5/site-packages/examples/repository.py", line 12
    print "Repo's users: %s" % repo.users
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/users.py'...
***   File "./lib/python3.5/site-packages/examples/users.py", line 24
    print vlad.is_admin
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mock-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyolite'...
Listing './lib/python3.5/site-packages/pyolite/managers'...
Listing './lib/python3.5/site-packages/pyolite/models'...
Listing './lib/python3.5/site-packages/pyolite/models/lists'...
Listing './lib/python3.5/site-packages/pyolite-1.5.9.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sh-1.9.egg-info'...
Listing './lib/python3.5/site-packages/six-1.6.1.dist-info'...
Listing './lib/python3.5/site-packages/spec'...
Listing './lib/python3.5/site-packages/spec-0.11.1.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/lists'...
Listing './lib/python3.5/site-packages/tests/managers'...
Listing './lib/python3.5/site-packages/tests/models'...
Listing './lib/python3.5/site-packages/unipath'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
